--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication1"
-        tools:targetApi="31">
+        tools:targetApi="34">
+        <activity
+            android:name=".Additem"
+            android:exported="false"
+            android:label="@string/title_activity_additem"
+            android:theme="@style/Theme.MyApplication1" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
