--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.MyApplication1"
         tools:targetApi="34">
         <activity
+            android:name=".FoodRepository"
+            android:exported="false"
+            android:label="@string/title_activity_food_repository"
+            android:theme="@style/Theme.MyApplication1" />
+        <activity
             android:name=".Additem"
             android:exported="false"
             android:label="@string/title_activity_additem"
